# repsnapper

./: .gitignore  BUILD_OSX.txt  CMakeLists.txt  HACKING  INSTALL  Makefile.am  README  README.asciidoc  README.html  README.win32  TODO  WIN32_CROSS_COMPILE.txt  autogen.sh  common.c  common.h  comms.c  comms.h  comms_private.h  configure.ac  fived.c  gcode.c  gcode.h  license-audit.txt  licensing.txt  readme.linux.txt  readme.macosx.txt  readme.txt  reprap.c  reprap.h  repsnapper.appdata.xml.in  repsnapper.desktop.in  serial.c  serial.h  todo.txt  tonokip.c  util.c  util.h  version.h
libraries/amf/: Makefile.am
libraries/amf/amftools-code/include/: AMF_File.h  Amf.h  Equation.h  Mesh.h  MeshSlice.h  STL_File.h  SimpleImage.h  Vec3D.h  X3D_File.h  XmlCompress.h  XmlStream.h  nAmf.h  nColor.h  nComposite.h  nConstellation.h  nCoordinates.h  nEdge.h  nInstance.h  nMaterial.h  nMesh.h  nMetadata.h  nNormal.h  nObject.h  nTexmap.h  nTexture.h  nTriangle.h  nVertex.h  nVertices.h  nVolume.h
libraries/amf/amftools-code/src/: AMF_File.cpp  Amf.cpp  Equation.cpp  Mesh.cpp  MeshSlice.cpp  STL_File.cpp  SimpleImage.cpp  X3D_File.cpp  XmlCompress.cpp  XmlStream.cpp  nAmf.cpp  nColor.cpp  nComposite.cpp  nConstellation.cpp  nCoordinates.cpp  nEdge.cpp  nInstance.cpp  nMaterial.cpp  nMesh.cpp  nMetadata.cpp  nNormal.cpp  nObject.cpp  nTexmap.cpp  nTexture.cpp  nTriangle.cpp  nVertex.cpp  nVertices.cpp  nVolume.cpp
libraries/clipper/: Makefile.am
libraries/clipper/clipper/: README
libraries/clipper/clipper/Delphi/: clipper.pas
libraries/clipper/clipper/Documentation/: clipper.chm
libraries/clipper/clipper/Flash/: AS3_flash_readme.txt
libraries/clipper/clipper/perl/: perl_readme.txt
libraries/clipper/clipper/polyclipping-code/: README
libraries/clipper/clipper/ruby/: ruby_readme.txt
libraries/gle/: Makefile.am
libraries/gle/gle-3.1.0/src/: ex_alpha.c  ex_angle.c  ex_cut_round.c  ex_raw.c  extrude.c  extrude.h  gle.h  port.h  round_cap.c  segment.c  segment.h  texgen.c  tube_gc.h  vvector.h
libraries/libreprap/: Makefile.am  README  TODO  comms.c  comms.h  comms_private.h  fived.c  fived.h  serial.c  serial.h  serialwin32.c  tonokip.c  tonokip.h  util.c  util.h
libraries/lmfit/: Makefile.am
libraries/lmfit/lmfit-3.2/lib/: lmmin.c
libraries/lmfit/lmfit-5.0/lib/: Makefile.am  lmcurve.c  lmcurve.h  lmmin.c  lmmin.h  lmstruct.h
libraries/poly2tri/: Makefile.am
libraries/polylib/: GeometryBase.cpp  GeometryBase.h  GeometryBase_float.cpp  GeometryBase_float.h  Makefile  Makefile.am  Polygon2d.cpp  Polygon2d.h  Polygon2f.cpp  Polygon2f.h  platform.h
libraries/vmmlib/: ACKNOWLEDGEMENTS  AUTHORS  CHANGES  CMakeLists.txt  LICENSE  Makefile.am  Makefile.atlas  Makefile.make  Makefile.orig  README  README.md  RELNOTES.md  VMMLib-Info.plist  pack_release.sh
libraries/vmmlib/English.lproj/: InfoPlist.strings
libraries/vmmlib/VMMLib.xcodeproj/: project.pbxproj
libraries/vmmlib/doc/: Doxyfile
libraries/vmmlib/include/: Makefile.am
libraries/vmmlib/include/vmmlib/: LICENSE  Makefile.am  aabb.hpp  axisAlignedBoundingBox.h  blas_daxpy.hpp  blas_dgemm.hpp  blas_dot.hpp  blas_includes.hpp  blas_types.hpp  cp3_tensor.hpp  details.hpp  exception.hpp  (+65 more)
libraries/vmmlib/tests/: JacobiSolverTest.cpp  JacobiSolverTest.h  Makefile  Matrix3Test.cpp  Matrix3Test.h  Matrix4Test.cpp  Matrix4Test.h  QuaternionTest.cpp  QuaternionTest.h  SVDTest.cpp  SVDTest.h  Test.h  Vector2Test.cpp  Vector2Test.h  Vector3Test.cpp  Vector3Test.h  Vector4Test.cpp  Vector4Test.h  lapack_linear_least_squares_test.cpp  lapack_linear_least_squares_test.hpp  lapack_svd_test.cpp  lapack_svd_test.hpp  main_test.cpp  make_stringtests.sh  matrix_compare_perf_test.cpp  matrix_compare_perf_test.hpp  matrix_test.cpp  matrix_test.hpp  perf_test.cpp  performance_test.cpp  performance_test.hpp  qr_decomposition_test.cpp  qr_decomposition_test.hpp  quaternion_test.cpp  quaternion_test.hpp  stringtests.cpp  svd_lapack_vs_old.cpp  svd_lapack_vs_old.hpp  svd_test.cpp  svd_test.hpp  (+9 more)
libraries/vmmlib/website/: README_upload  index.html  stylesheet.css
src/: .gitignore  ArcBall.cpp  ArcBall.h  AsyncSerial.cpp  AsyncSerial.h  Convert.h  File.h  FluSimpleString.cpp  FluSimpleString.h  Flu_DND.cpp  Flu_DND.h  Flu_Enumerations.h  Flu_Tree_Browser.cpp  Flu_Tree_Browser.h  GCode.cpp  Info.plist  Info.plist.default  Makefile  Makefile.am  Makefile.win  ModelViewController.cpp  ModelViewController.h  Printer.cpp  Printer.h  ProcessController.cpp  ProcessController.h  RFO.cpp  RFO.h  RepRapSerial.cpp  RepRapSerial.h  RepSnapper.cpp  UI.fl  arcball.cpp  arcball.h  asyncserial.cpp  asyncserial.h  command.cpp  command.h  config.h  connectview.cpp  (+88 more)
src/gcode/: Makefile.am  command.cpp  command.h  gcode.cpp  gcode.h  gcodestate.cpp  gcodestate.h
src/printer/: Makefile.am  custom_baud.cpp  custom_baud.h  printer.cpp  printer.h  printer2.cpp  printer_iochannel.cpp  printer_libreprap.cpp  printer_serial.cpp  printer_serial.h  printer_serial_test.cpp  reprap_serial.cpp  reprap_serial.h  test.gcode  thread.h  thread_buffer.cpp  thread_buffer.h  thread_buffer_test.cpp  threaded_printer_serial.cpp  threaded_printer_serial.h  threaded_printer_serial_test.cpp
src/settings/: ed-sells-mendel.conf  mendel-max.conf  prusa-mendel.conf  reprap-darwin.conf  reprap-wallace.conf  reprappro-huxley.conf
src/slicer/: Makefile.am  antiooze.cpp  antiooze.h  clipping.cpp  clipping.h  cuttingplane.cpp  cuttingplane.h  draw.cpp  gcode.cpp  gcode.h  geometry.cpp  geometry.h  infill.cpp  infill.h  infillpattern.cpp  infillpattern.h  layer.cpp  layer.h  modify.cpp  object.cpp  object.h  optimize.cpp  poly.cpp  poly.h  printlines.cpp  printlines.h  printlines_antiooze.cpp  read.cpp  slice.cpp  slicer.cpp  slicer.h  slicer_draw.cpp  slicer_logick.cpp  slicer_logick.h  slicer_modify.cpp  slicer_optimize.cpp  slicer_read.cpp  slicer_slice.cpp  triangle.cpp  triangle.h
src/ui/: Makefile  Makefile.am  connectview.cpp  connectview.h  filechooser.cpp  filechooser.h  prefs_dlg.cpp  prefs_dlg.h  progress.cpp  progress.h  view.cpp  view.h  widgets.cpp  widgets.h
(+197 files in other folders)
