noinst_LTLIBRARIES += libamf.la

libamf_la_CPPFLAGS = \
	-I$(srcdir) \
	-I$(top_srcdir)/libraries/amf/amftools-code/include/ \
	-I$(top_srcdir)/libraries/amf/amftools-code/include/muparser \
        $(EXTRA_CFLAGS)

libamf_la_SOURCES = \
	 libraries/amf/amftools-code/include/Amf.h \
	 libraries/amf/amftools-code/src/Amf.cpp \
	 libraries/amf/amftools-code/include/nObject.h \
	 libraries/amf/amftools-code/include/stb_image	\
	 libraries/amf/amftools-code/include/stb_image/stb_image.h \
	 libraries/amf/amftools-code/include/nTexmap.h \
	 libraries/amf/amftools-code/include/nMesh.h \
	 libraries/amf/amftools-code/include/Amf.h \
	 libraries/amf/amftools-code/include/nCoordinates.h \
	 libraries/amf/amftools-code/include/SimpleImage.h \
	 libraries/amf/amftools-code/include/Vec3D.h \
	 libraries/amf/amftools-code/include/nComposite.h \
	 libraries/amf/amftools-code/include/nNormal.h \
	 libraries/amf/amftools-code/include/X3D_File.h \
	 libraries/amf/amftools-code/include/nVertex.h \
	 libraries/amf/amftools-code/include/XmlCompress.h \
	 libraries/amf/amftools-code/include/nMaterial.h \
	 libraries/amf/amftools-code/include/muparser/muParser.h \
	 libraries/amf/amftools-code/include/muparser/muParserCallback.h \
	 libraries/amf/amftools-code/include/muparser/muParserBytecode.h \
	 libraries/amf/amftools-code/include/muparser/muParserBase.h \
	 libraries/amf/amftools-code/include/muparser/muParserError.h \
	 libraries/amf/amftools-code/include/muparser/muParserTokenReader.h \
	 libraries/amf/amftools-code/include/muparser/muParserStack.h \
	 libraries/amf/amftools-code/include/muparser/muParserDef.h \
	 libraries/amf/amftools-code/include/muparser/muParserToken.h \
	 libraries/amf/amftools-code/include/muparser/muParserFixes.h \
	 libraries/amf/amftools-code/include/nTriangle.h \
	 libraries/amf/amftools-code/include/nVertices.h \
	 libraries/amf/amftools-code/include/nInstance.h \
	 libraries/amf/amftools-code/include/Mesh.h \
	 libraries/amf/amftools-code/include/rapidxml/rapidxml_print.h \
	 libraries/amf/amftools-code/include/rapidxml/rapidxml.h \
	 libraries/amf/amftools-code/include/STL_File.h \
	 libraries/amf/amftools-code/include/nConstellation.h \
	 libraries/amf/amftools-code/include/nColor.h \
	 libraries/amf/amftools-code/include/Equation.h \
	 libraries/amf/amftools-code/include/nMetadata.h \
	 libraries/amf/amftools-code/include/AMF_File.h \
	 libraries/amf/amftools-code/include/nAmf.h \
	 libraries/amf/amftools-code/include/nTexture.h \
	 libraries/amf/amftools-code/include/nEdge.h \
	 libraries/amf/amftools-code/include/MeshSlice.h \
	 libraries/amf/amftools-code/include/XmlStream.h \
	 libraries/amf/amftools-code/include/zip \
	 libraries/amf/amftools-code/include/zip/zip.h \
	 libraries/amf/amftools-code/include/zip/unzip.h \
	 libraries/amf/amftools-code/include/nVolume.h \
	 libraries/amf/amftools-code/src/zip/zip.cpp \
	 libraries/amf/amftools-code/src/zip/unzip.cpp \
	 libraries/amf/amftools-code/src/nMetadata.cpp \
	 libraries/amf/amftools-code/src/nTriangle.cpp \
	 libraries/amf/amftools-code/src/nTexmap.cpp \
	 libraries/amf/amftools-code/src/nTexture.cpp \
	 libraries/amf/amftools-code/src/Equation.cpp \
	 libraries/amf/amftools-code/src/nObject.cpp \
	 libraries/amf/amftools-code/src/nVertex.cpp \
	 libraries/amf/amftools-code/src/nComposite.cpp \
	 libraries/amf/amftools-code/src/AMF_File.cpp \
	 libraries/amf/amftools-code/src/nInstance.cpp \
	 libraries/amf/amftools-code/src/nCoordinates.cpp \
	 libraries/amf/amftools-code/src/nAmf.cpp \
	 libraries/amf/amftools-code/src/XmlCompress.cpp \
	 libraries/amf/amftools-code/src/nMesh.cpp \
	 libraries/amf/amftools-code/src/nVertices.cpp \
	 libraries/amf/amftools-code/src/nNormal.cpp \
	 libraries/amf/amftools-code/src/nColor.cpp \
	 libraries/amf/amftools-code/src/STL_File.cpp \
	 libraries/amf/amftools-code/src/nVolume.cpp \
	 libraries/amf/amftools-code/src/nEdge.cpp \
	 libraries/amf/amftools-code/src/SimpleImage.cpp \
	 libraries/amf/amftools-code/src/nConstellation.cpp \
	 libraries/amf/amftools-code/src/XmlStream.cpp \
	 libraries/amf/amftools-code/src/stb_image/stb_image.cpp \
	 libraries/amf/amftools-code/src/nMaterial.cpp \
	 libraries/amf/amftools-code/src/Mesh.cpp \
	 libraries/amf/amftools-code/src/X3D_File.cpp \
	 libraries/amf/amftools-code/src/MeshSlice.cpp \
	 libraries/amf/amftools-code/src/muparser/muParserError.cpp \
	 libraries/amf/amftools-code/src/muparser/muParserBase.cpp \
	 libraries/amf/amftools-code/src/muparser/muParser.cpp \
	 libraries/amf/amftools-code/src/muparser/muParserTokenReader.cpp \
	 libraries/amf/amftools-code/src/muparser/muParserCallback.cpp \
	 libraries/amf/amftools-code/src/muparser/muParserBytecode.cpp
