noinst_LTLIBRARIES += libclipper.la

libclipper_la_CPPFLAGS = \
	-I$(srcdir) \
	-I$(top_srcdir)/libraries/clipper/clipper/polyclipping/trunk/cpp/ \
        $(EXTRA_CFLAGS)

libclipper_la_SOURCES = \
	libraries/clipper/clipper/polyclipping/trunk/cpp/clipper.cpp \
	libraries/clipper/clipper/polyclipping/trunk/cpp/clipper.hpp
