noinst_LTLIBRARIES += libgle.la

libgle_la_CPPFLAGS = \
	-I$(top_srcdir)/libraries/gle/gle-3.1.0/src
        $(EXTRA_CFLAGS)

libgle_la_SOURCES = \
	libraries/gle/gle-3.1.0/src/copy.h \
	libraries/gle/gle-3.1.0/src/ex_alpha.c \
	libraries/gle/gle-3.1.0/src/ex_angle.c \
	libraries/gle/gle-3.1.0/src/ex_cut_round.c \
	libraries/gle/gle-3.1.0/src/ex_raw.c \
	libraries/gle/gle-3.1.0/src/extrude.c \
	libraries/gle/gle-3.1.0/src/extrude.h \
	libraries/gle/gle-3.1.0/src/gle.h \
	libraries/gle/gle-3.1.0/src/intersect.c \
	libraries/gle/gle-3.1.0/src/intersect.h \
	libraries/gle/gle-3.1.0/src/port.h \
	libraries/gle/gle-3.1.0/src/qmesh.c \
	libraries/gle/gle-3.1.0/src/rot.h \
	libraries/gle/gle-3.1.0/src/rot_prince.c \
	libraries/gle/gle-3.1.0/src/rotate.c \
	libraries/gle/gle-3.1.0/src/round_cap.c \
	libraries/gle/gle-3.1.0/src/segment.c \
	libraries/gle/gle-3.1.0/src/segment.h \
	libraries/gle/gle-3.1.0/src/texgen.c \
	libraries/gle/gle-3.1.0/src/tube_gc.h \
	libraries/gle/gle-3.1.0/src/urotate.c \
	libraries/gle/gle-3.1.0/src/view.c \
	libraries/gle/gle-3.1.0/src/vvector.h

