noinst_LTLIBRARIES += libreprap.la

libreprap_la_CPPFLAGS = -I$(srcdir) $(EXTRA_CFLAGS)

libreprap_la_SOURCES = \
	libraries/libreprap/comms.c \
	libraries/libreprap/comms.h \
	libraries/libreprap/comms_private.h \
	libraries/libreprap/fived.c \
	libraries/libreprap/fived.h \
	libraries/libreprap/serial.c \
	libraries/libreprap/serial.h \
	libraries/libreprap/tonokip.c \
	libraries/libreprap/tonokip.h \
	libraries/libreprap/util.c \
	libraries/libreprap/util.h

EXTRA_DIST += libraries/libreprap/TODO libraries/libreprap/README
