noinst_LTLIBRARIES += libpolylib.la

libpolylib_la_CPPFLAGS = \
	-I$(srcdir) \
	-I$(top_srcdir)/libraries/vmmlib/include \
        $(EXTRA_CFLAGS)

libpolylib_la_SOURCES = \
	libraries/polylib/GeometryBase.cpp \
	libraries/polylib/GeometryBase.h \
	libraries/polylib/Polygon2f.cpp \
	libraries/polylib/Polygon2f.h \
	libraries/polylib/platform.h
